2007-07-01  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/components/compzillaWindowManager.js: Remove this,
	it's no longer used since we moved to the event/observer model for
	native->js comm.

	* compzilla/src/compzillaEventManager.cpp,
	compzilla/src/compzillaWindowEvents.cpp,
	compzilla/src/compzillaEventManager.h,
	compzilla/src/compzillaWindowEvents.h,
	compzilla/public/compzillaIWindowEvents.idl: Delete these old
	files held over from the event-based attempt, before we switched
	to using observers.

2007-06-27  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/atoms.js (Atoms): Intern
	_NET_VIRTUAL_ROOTS.

	Fixup some JS var bugs.

2007-06-27  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp (ConvertNsRegion): Add.
	(SetOverlayInput): Add.
	(SetRootWindowProperty): Call SetOverlayInput in response to
	_NET_ACTIVE_WINDOW changes, if OVERLAY_INPUT_REGION is defined.
	(AddWindow): Don't call MapWindow from here.

	* compzilla/src/compzillaWindow.cpp (SendMouseEvent): Call
	XGrabKey to match XGrabButton.
	(EnsurePixmap): Drop the UpdateAttributes here.
	(WindowConfigured): Call WindowDamaged with the full contents if
	the size has changed.  
	Add GetDisplayRegion to fill an nsRegion list with the exposed
	rectangles.  Call MapWindow if the window is already visible.

2007-06-25  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/chrome/content/content.js: Set the style.display to
	"block" right away.  Set style.visibility in onshow/hide.

	* compzilla/chrome/content/frame.js: Use _PYRO_NAMESPACE instead
	of duplicting the string.
	(moveResizeToContent) Toggle visibility of the frame so we can get
	accurate offsets if it's hidden.
	Don't call _content.onshow/hide for override_redirect windows.

2007-06-20  Alex Graveley  <alex@beatniksoftware.com>

	* compzilla/src/compzillaControl.cpp: Don't use
	MOZILLA_INTERNAL_API.

	* compzilla/src/compzillaEventManager.h: Ditto.
