@@ -1,12 +1,0 @@
-<html>
-<head>
-	<link type="text/css" href="chrome://compzilla/skin/compzilla.css" rel="stylesheet" />
-</head>
-
-<body>
-
-  <div id="overlay">
-  </div>
-
-</body>
-</html>
